@@ -11,7 +11,7 @@ Copyright (C) 2012-2016  Антон Скшидлевский, [GPLv3](http://ope
 * Поддерживаемые файловые системы: ext2, ext3, ext4
 * Поддерживаемые архитектуры: ARM, ARM64, x86, x86_64, режим эмуляции (ARM ~ x86)
 * Интерфейс управления: CLI, SSH, VNC, X11, фрейм-буфер
-* Окружение рабочего стола: XTerm, LXDE, Xfce, GNOME, KDE, другое (ручная настройка)
+* Окружение рабочего стола: XTerm, LXDE, Xfce, MATE, другое (ручная настройка)
 * Поддерживаемые языки: мультиязычный интерфейс
 
 #### Установка ####
