@@ -14,7 +14,7 @@
     <string name="nettrack" translatable="false">false</string>
     <string name="terminalcmd" translatable="false">telnet 127.0.0.1 5023</string>
     <string name="env_dir" translatable="false"></string>
-    <string name="repository_url" translatable="false">http://s3.amazonaws.com/meefik/</string>
+    <string name="repository_url" translatable="false">http://s3.amazonaws.com/linuxdeploy/</string>
     <string name="path" translatable="false"></string>
     <string name="is_cli" translatable="false">false</string>
     <string name="is_telnet" translatable="false">false</string>
@@ -98,7 +98,7 @@
     <string name="intel_ubuntu_arch" translatable="false">i386</string>
         
     <!-- Kali Linux -->
-    <string name="kalilinux_suite" translatable="false">sana</string>
+    <string name="kalilinux_suite" translatable="false">kali-rolling</string>
     <!-- arm -->
     <string name="arm_kalilinux_source_path" translatable="false">http://http.kali.org/kali/</string>
     <string name="arm_kalilinux_arch" translatable="false">armhf</string>
